--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,5 +1,6 @@
-<ion-tabs>
-  <ion-tab [root]="tab1Root" [tabTitle]="tab1Title" tabIcon="home"></ion-tab>
-  <ion-tab [root]="tab2Root" [tabTitle]="tab2Title" tabIcon="search"></ion-tab>
-  <ion-tab [root]="tab3Root" [tabTitle]="tab3Title" tabIcon="cog"></ion-tab>
+<ion-tabs color="primary">
+  <ion-tab [root]="tab1Root" [tabTitle]="tab1Title" tabIcon="ios-home-outline"></ion-tab>
+  <ion-tab [root]="tab2Root" [tabTitle]="tab2Title" tabIcon="ios-chatboxes-outline"></ion-tab>
+  <ion-tab [root]="tab3Root" [tabTitle]="tab3Title" tabIcon="ios-open-outline"></ion-tab>
+  <ion-tab [root]="tab4Root" [tabTitle]="tab4Title" tabIcon="ios-person-outline"></ion-tab>
 </ion-tabs>
