去掉slide menu,使用iOS样式

--- a/src/pages/list-master/list-master.html
+++ b/src/pages/list-master/list-master.html
@@ -1,6 +1,6 @@
 <ion-header>
 
-  <ion-navbar color="primary">
+  <ion-navbar>
     <ion-title>{{ 'LIST_MASTER_TITLE' | translate }}</ion-title>
 
     <ion-buttons end>
@@ -12,7 +12,7 @@
 
 </ion-header>
 
-<ion-content>
+<ion-content fullscreen>
 
   <ion-list>
     <ion-item-sliding *ngFor="let item of currentItems">
