--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,4 +1,4 @@
-<ion-tabs color="primary">
+<ion-tabs>
   <ion-tab [root]="tab1Root" [tabTitle]="tab1Title" tabIcon="ios-home-outline"></ion-tab>
   <ion-tab [root]="tab2Root" [tabTitle]="tab2Title" tabIcon="ios-chatboxes-outline"></ion-tab>
   <ion-tab [root]="tab3Root" [tabTitle]="tab3Title" tabIcon="ios-open-outline"></ion-tab>
