--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,14 +5,44 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-
-  <ion-navbar>
-    <ion-title>home</ion-title>
+  <ion-navbar style="opacity: 0.8">
+    <ion-title>{{title}}</ion-title>
   </ion-navbar>
-
 </ion-header>
+<ion-content>
+  <ion-slides pager autoplay="3000" speed="1000" loop="true" autoplayDisableOnInteration="true">
+    <ion-slide *ngFor="let item of slideData" (click)="openPage(item)">
+      <img src="{{item.img}}" alt="{{item.title}}">
+      <div class="cover"></div>
+      <span class="title">{{item.title}}</span>
+    </ion-slide>
+  </ion-slides>
 
+  <ion-card *ngFor="let page of pages" (click)="openPage(page)">
+    <ion-item>
+      <h2>{{page.title}}</h2>
+    </ion-item>
+    <ion-card-content>
+      <p>{{page.abstract}}</p>
+    </ion-card-content>
+    <ion-row>
+      <ion-col>
+        <button ion-button clear small>
+          <span>{{page.time}}</span>
+        </button>
+      </ion-col>
+      <ion-col>
+        <button ion-button icon-left clear small>
+          <ion-icon name="thumbs-up"></ion-icon>
+          <span>{{page.like}}</span>
+        </button>
+        <button ion-button icon-left clear small>
+          <ion-icon name="text"></ion-icon>
+          <span>{{page.commit}}</span>
+        </button>
+      </ion-col>
+    </ion-row>
+  </ion-card>
 
-<ion-content padding>
 
 </ion-content>
