--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,12 +5,10 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-  <ion-navbar style="opacity: 0.8">
-    <ion-title>{{title}}</ion-title>
-  </ion-navbar>
+  <ion-searchbar style="opacity: 0.8" (ionInput)="search($event)"></ion-searchbar>
 </ion-header>
 <ion-content>
-  <ion-slides pager autoplay="3000" speed="1000" loop="true" autoplayDisableOnInteration="true">
+  <ion-slides autoplay="3000" speed="1000" loop="true" autoplayDisableOnInteration="true">
     <ion-slide *ngFor="let item of slideData" (click)="openPage(item)">
       <img src="{{item.img}}" alt="{{item.title}}">
       <div class="cover"></div>
@@ -33,11 +31,11 @@
       </ion-col>
       <ion-col>
         <button ion-button icon-left clear small>
-          <ion-icon name="thumbs-up"></ion-icon>
+          <ion-icon name="ios-thumbs-up-outline"></ion-icon>
           <span>{{page.like}}</span>
         </button>
         <button ion-button icon-left clear small>
-          <ion-icon name="text"></ion-icon>
+          <ion-icon name="ios-text-outline"></ion-icon>
           <span>{{page.commit}}</span>
         </button>
       </ion-col>
