--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,7 +5,7 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-  <ion-searchbar style="opacity: 0.8" (ionInput)="search($event)"></ion-searchbar>
+  <ion-searchbar style="opacity: 0.8" (click)="goSearch($event)" placeholder="搜索文章、提问"></ion-searchbar>
 </ion-header>
 <ion-content>
   <ion-slides autoplay="3000" speed="1000" loop="true" autoplayDisableOnInteration="true">
