--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>{{title}}</ion-title>
+    <ion-title>{{"PROFILE_TITLE" | translate}}</ion-title>
   </ion-navbar>
 
 </ion-header>
