--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,10 +5,11 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-  <ion-searchbar style="opacity: 0.8" (click)="goSearch($event)" placeholder="搜索文章、提问"></ion-searchbar>
+  <ion-searchbar style="opacity: 0.8" (click)="goSearch()"
+                 placeholder="{{ 'SEARCH_TITLE' | translate }}"></ion-searchbar>
 </ion-header>
 <ion-content>
-  <ion-slides autoplay="3000" speed="1000" loop="true" autoplayDisableOnInteration="true">
+  <ion-slides pager autoplay="3000" speed="1000" loop="true" autoplayDisableOnInteration="true">
     <ion-slide *ngFor="let item of slideData" (click)="openPage(item)">
       <img src="{{item.img}}" alt="{{item.title}}">
       <div class="cover"></div>
