--- a/src/pages/search/search.html
+++ b/src/pages/search/search.html
@@ -5,13 +5,10 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-
-  <ion-navbar>
-    <ion-title>search</ion-title>
-  </ion-navbar>
-
+  <ion-toolbar>
+    <ion-searchbar (input)="search($event)" placeholder="{{ 'SEARCH_TITLE' | translate }}"></ion-searchbar>
+  </ion-toolbar>
 </ion-header>
-
 
 <ion-content padding>
 
