--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -5,15 +5,17 @@
   <ion-tab [root]="tab3Root" [tabTitle]="tab3Title" tabIcon="ios-open-outline"></ion-tab>
   <ion-tab [root]="tab4Root" [tabTitle]="tab4Title" tabIcon="ios-person-outline"></ion-tab>
   <ion-fab center bottom>
-    <button ion-fab color="primary">
+    <button ion-fab>
       <ion-icon name="add"></ion-icon>
     </button>
-    <ion-fab-list side="top">
+    <ion-fab-list side="right">
       <button ion-fab color="primary">
-        <ion-icon name="logo-vimeo"></ion-icon>
+        <ion-icon name="ios-document-outline"></ion-icon>
       </button>
+    </ion-fab-list>
+    <ion-fab-list side="left">
       <button ion-fab color="primary">
-        <ion-icon name="logo-googleplus"></ion-icon>
+        <ion-icon name="ios-megaphone-outline"></ion-icon>
       </button>
     </ion-fab-list>
   </ion-fab>
