--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,4 +1,4 @@
-嗒b<ion-tabs #mainTabs>
+<ion-tabs #mainTabs>
   <ion-tab [root]="tab1Root" [tabTitle]="tab1Title" tabIcon="ios-home-outline"></ion-tab>
   <ion-tab [root]="tab2Root" [tabTitle]="tab2Title" [tabBadge]="tab2Badge" tabIcon="ios-chatboxes-outline"></ion-tab>
   <ion-tab></ion-tab>
