--- a/src/pages/tutorial/tutorial.html
+++ b/src/pages/tutorial/tutorial.html
@@ -1,12 +1,12 @@
-<ion-header no-shadow>
+<ion-header no-shadow *ngIf="!isLogined">
   <ion-navbar>
-    <ion-buttons end *ngIf="showSkip">
+    <ion-buttons end>
       <button ion-button (click)="startApp()" color="primary">{{ 'TUTORIAL_SKIP_BUTTON' | translate}}</button>
     </ion-buttons>
   </ion-navbar>
 </ion-header>
 
-<ion-content no-bounce>
+<ion-content no-bounce *ngIf="!isLogined">
   <ion-slides pager="true" dir="{{dir}}" (ionSlideWillChange)="onSlideChangeStart($event)">
     <ion-slide *ngFor="let slide of slides">
       <img [src]="slide.image" class="slide-image" />
@@ -20,6 +20,15 @@
         {{ 'TUTORIAL_CONTINUE_BUTTON' | translate }}
         <ion-icon name="arrow-forward"></ion-icon>
       </button>
+    </ion-slide>
+  </ion-slides>
+</ion-content>
+
+<ion-content no-bounce *ngIf="isLogined">
+  <ion-slides>
+    <ion-slide>
+      <button ion-button outline class="time" disabled>广告{{deadTime}}秒</button>
+      <img src="assets/img/advert.png"/>
     </ion-slide>
   </ion-slides>
 </ion-content>
