--- a/src/pages/tutorial/tutorial.html
+++ b/src/pages/tutorial/tutorial.html
@@ -27,7 +27,7 @@
 <ion-content no-bounce *ngIf="isLogined">
   <ion-slides>
     <ion-slide>
-      <button ion-button outline class="time" disabled>广告{{deadTime}}秒</button>
+      <button ion-button outline class="time" (click)="startApp()">广告{{deadTime}}</button>
       <img src="assets/img/advert.png"/>
     </ion-slide>
   </ion-slides>
