--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -8,6 +8,11 @@
 
   <ion-navbar>
     <ion-title>{{"PROFILE_TITLE" | translate}}</ion-title>
+    <ion-buttons end>
+      <button ion-button icon-only color="light" (click)="editProfile()">
+        <ion-icon name="ios-settings-outline"></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
 </ion-header>
 
