--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -42,11 +42,11 @@
         <button ion-button clear small>
           <span>{{page.time}}</span>
         </button>
-        <button ion-button icon-left clear small style="float: right">
+        <button ion-button icon-left clear small class="buttom-btn" >
           <ion-icon name="ios-thumbs-up-outline"></ion-icon>
           <span>{{page.like}}</span>
         </button>
-        <button ion-button icon-left clear small style="float: right">
+        <button ion-button icon-left clear small class="buttom-btn">
           <ion-icon name="ios-text-outline"></ion-icon>
           <span>{{page.commit}}</span>
         </button>
