--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -54,10 +54,9 @@
       <ion-label>我的文章</ion-label>
       <ion-note item-end>12</ion-note>
     </button>
-    <button ion-item>
-      <ion-icon name="leaf" item-start></ion-icon>
-      <ion-label>我的消息</ion-label>
-      <ion-note item-end>12</ion-note>
+    <button ion-item (click)="openProjects()">
+      <ion-icon name="logo-github" item-start></ion-icon>
+      <ion-label>开源项目</ion-label>
     </button>
     <button ion-item>
       <ion-icon name="leaf" item-start></ion-icon>
