--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -20,9 +20,9 @@
 <ion-content>
   <ion-item class="profile-avatar">
     <ion-avatar item-start>
-      <img src="{{profile.avatar}}">
+      <img src="{{profile.avator}}">
     </ion-avatar>
-    <span>{{profile.userName}} &nbsp;&nbsp;</span>
+    <span>{{profile.name}} &nbsp;&nbsp;</span>
     <ion-icon name="male" *ngIf="profile.sex==0"></ion-icon>
     <ion-icon name="female" *ngIf="profile.sex!=0"></ion-icon>
   </ion-item>
